k8s/bookshop-srv-memory-limit-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshop-srv
  namespace: bookshop-prod
spec:
  template:
    spec:
      containers:
        - name: bookshop-srv
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
